# python_machine_Learning

Convolutional_Neural_Networks/: Basics of CNN  CNN.py  convolutional_NN.py  intro_to_convo
Deep_Learning/: Readme.txt  artificial_NN.py  deep_learning_introduction.mhtml
ML_assignments/Machine Learning Pregramming 2/: cars.xml
ML_assignments/Machine Learning Pregramming 3/: Output.txt
ML_assignments/Machine Learning Pregramming 4/: Output.txt
Machine Learning Pregramming 2/: MLDecisionTrees.py
Machine Learning Pregramming 3/: Naive_Bayes_Classifier.py
Machine Learning Pregramming 4/: k_Nearest_Neighbour.py  output.csv
data_preprocessing/: preprocessing.py
deep_learning_keras/: Keras_summary  get_more_accuracy  hands_on_keras.py
deep_learning_keras/.ipynb_checkpoints/: A Gentle Introduction to Keras-checkpoint.ipynb
flip_preprocessing_tool/: CMakeLists.txt  package.xml  setup.py
flip_preprocessing_tool/scripts/: bulk_data_extraction.py  data_extraction.py
regression/multiple_linear_regression/: Readme.txt  multiple_linear_regression.py
regression/simple_linear_regression/: simple_linear_regression.py
